[gd_scene load_steps=5 format=3 uid="uid://bhn2a55xgdaiy"]

[ext_resource type="Script" uid="uid://clmqvj2tajybx" path="res://nodes/ui/battlebuttons.gd" id="1_wnd6s"]
[ext_resource type="Texture2D" uid="uid://c2neuexdd1c1a" path="res://sprites/ui/fight.png" id="2_qgufa"]
[ext_resource type="AudioStream" uid="uid://ciurx77q0f6lx" path="res://snd/movemenu.wav" id="3_qgufa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wnd6s"]
size = Vector2(112, 44)

[node name="Battlebuttons" type="Node2D"]
script = ExtResource("1_wnd6s")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_qgufa")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wnd6s")

[node name="snd_movemenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qgufa")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
